--- a/best-practices/require-ro-rootfs/require-ro-rootfs.yaml
+++ b/best-practices/require-ro-rootfs/require-ro-rootfs.yaml
@@ -4,7 +4,7 @@ metadata:
   name: require-ro-rootfs
   annotations:
     policies.kyverno.io/title: Require Read-Only Root Filesystem
-    policies.kyverno.io/category: Best Practices, EKS Best Practices
+    policies.kyverno.io/category: Best Practices, EKS Best Practices, PSP Migration
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/minversion: 1.6.0
