--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,35 +19,24 @@ jobs:
         with:
           path: policies
 
-      - name: Clone Kyverno
-        uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab
-        with:
-          repository: kyverno/kyverno
-          path: kyverno
-          # The target branch of a pull request or the branch/tag of a push
-          ref: ${{ github.base_ref || github.ref_name }}
-
-      - name: Set up Go 
-        uses: actions/setup-go@fac708d6674e30b6ba41289acaab6d4b75aa0753
-        with:
-          go-version: "1.20"
-
-      - name: Test Policy
-        run: go run ./cmd/cli/kubectl-kyverno test ../policies
-        working-directory: kyverno
-    
-      - name: Checkout kyverno/policies
-        uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab
-        with:
-          repository: kyverno/policies
-      
       - name: Validate all policies
         run: |
           #!/bin/bash
           set -euo pipefail
 
           # Loop through each policy directory in the repository
-          for policy_dir in $(find "$GITHUB_WORKSPACE" -type d -name '*-*' ! -name '.*' ! -path '*/\.*' ! -name '*_*'); do
+          for policy_dir in $(find "$GITHUB_WORKSPACE" -type d ! -name '.*' ! -path '*/\.*'); do
+            # Skip the root directory
+            if [[ "$policy_dir" == "$GITHUB_WORKSPACE" ]]; then
+              continue
+            fi
+
+            # Skip directories that contain subdirectories
+            if find "$policy_dir" -mindepth 1 -type d -print -quit | read; then
+              # If it does, skip the filename validation
+              continue
+            fi
+
             # Get the name of the directory
             dir_name=$(basename "$policy_dir")
 
@@ -57,9 +46,8 @@ jobs:
               exit 1
             fi
 
-            # Check if the directory contains any other directories
-            if find "$policy_dir" -mindepth 1 -type d | read; then
-              # If it does, skip the filename validation
+            # Skip if the directory contains a kustomization.yaml file
+            if [[ -f "$policy_dir/kustomization.yaml" ]]; then
               continue
             fi
 
@@ -74,4 +62,21 @@ jobs:
               echo "artifacthub-pkg.yml or artifacthub-pkg.yaml file is not found in the same folder as the policy in directory $policy_dir"
               exit 1
             fi
-          done
+          done  
+
+      - name: Clone Kyverno
+        uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab
+        with:
+          repository: kyverno/kyverno
+          path: kyverno
+          # The target branch of a pull request or the branch/tag of a push
+          ref: ${{ github.base_ref || github.ref_name }}
+
+      - name: Set up Go 
+        uses: actions/setup-go@4d34df0c2316fe8122ab82dc22947d607c0c91f9
+        with:
+          go-version: "1.20"
+
+      - name: Test Policy
+        run: go run ./cmd/cli/kubectl-kyverno test ../policies
+        working-directory: kyverno
