--- a/other/restrict-ingress-host/restrict-ingress-host.yaml
+++ b/other/restrict-ingress-host/restrict-ingress-host.yaml
@@ -31,8 +31,10 @@ spec:
       preconditions:
         all:
         - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: Equals
-          value: CREATE
+          operator: AllIn
+          value:
+          - CREATE
+          - UPDATE
         - key: "{{ request.object.spec.rules[].host }}"
           operator: AnyIn
           value: "{{ hosts }}"
@@ -48,8 +50,10 @@ spec:
       preconditions:
         all:
         - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: Equals
-          value: CREATE
+          operator: AllIn
+          value:
+          - CREATE
+          - UPDATE
         - key: "{{ request.object.spec.rules[].host | length(@)}}"
           operator: GreaterThan
           value: 1
