--- a/other/pdb-minavailable/pdb-minavailable.yaml
+++ b/other/pdb-minavailable/pdb-minavailable.yaml
@@ -28,8 +28,10 @@ spec:
       preconditions:
         all:
           - key: "{{request.operation || 'BACKGROUND'}}"
-            operator: Equals
-            value: CREATE
+            operator: AllIn
+            value:
+            - CREATE
+            - UPDATE
       context:
         - name: minavailable
           apiCall:
