fix: workflow_dispatch
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
 name: Kuttl Tests
 
 on:
-  - workflow_dispatch
-  - pull_request:
-      branches:
+  workflow_dispatch: {}
+  pull_request:
+    branches:
         - 'main'
 
 concurrency:
