--- a/argo/application-field-validation/application-field-validation.yaml
+++ b/argo/application-field-validation/application-field-validation.yaml
@@ -23,7 +23,7 @@ spec:
         any:
         - resources:
             kinds:
-              - Application
+            - argoproj.io/v1alpha1/Application
       validate:
         message: >-
           `spec.source.path` OR `spec.source.chart` should be specified but never both.
@@ -41,7 +41,7 @@ spec:
         any:
         - resources:
             kinds:
-              - Application
+            - argoproj.io/v1alpha1/Application
       validate:
         message: >-
           `spec.destination.server` OR `spec.destination.name` should be specified but never both.
