--- a/external-secret-operator/add-external-secret-prefix/add-external-secret-prefix.yaml
+++ b/external-secret-operator/add-external-secret-prefix/add-external-secret-prefix.yaml
@@ -25,7 +25,7 @@ spec:
       any:
       - resources:
           kinds:
-          - ExternalSecret
+          - external-secrets.io/v1beta1/ExternalSecret
     mutate:
       foreach: 
       - list: "request.object.spec.data"
