tests: argo, crddir
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/external-secret-operator/add-external-secret-prefix/add-external-secret-prefix.yaml
+++ b/external-secret-operator/add-external-secret-prefix/add-external-secret-prefix.yaml
@@ -25,7 +25,7 @@ spec:
       any:
       - resources:
           kinds:
-          - external-secrets.io/v1beta1/ExternalSecret
+          - ExternalSecret
     mutate:
       foreach: 
       - list: "request.object.spec.data"
