fix: requested changes, ci workflow
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/argo/application-prevent-updates-project/04-applications.yaml
+++ b/argo/application-prevent-updates-project/04-applications.yaml
@@ -4,4 +4,6 @@ apply:
 - file: application.yaml
   shouldFail: false
 - file: application-update.yaml
+  shouldFail: false
+- file: application-bad-update.yaml
   shouldFail: true
