--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,11 @@ jobs:
             # Get the name of the directory
             dir_name=$(basename "$policy_dir")
 
+            # Skip if it is the CRDs directory
+            if [[ $dir_name =~ ^.*CRDs.*$ ]]; then
+              continue
+            fi
+
             # Check if the directory name only contains alphanumeric characters and dashes
             if [[ ! $dir_name =~ ^[a-zA-Z0-9-]+$ ]]; then
               echo "Directory $dir_name contains invalid characters. Only alphanumeric characters and dashes are allowed."
