--- a/karpenter/set-karpenter-non-cpu-limits/pod-ephemeral-storage-patched1.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/pod-ephemeral-storage-patched1.yaml
@@ -1,13 +1,15 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: test
+  name: test1
   namespace: test
 spec:
   containers:
-    - name: test
+    - name: test1
       image: test/test:latest
       resources:
+        limits:
+          ephemeral-storage: "1Gi"
         requests:
           cpu: 1
           memory: "1Gi"
