--- a/karpenter/set-karpenter-non-cpu-limits/pod-ephemeral-storage-patched3.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/pod-ephemeral-storage-patched3.yaml
@@ -1,16 +1,18 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: test
+  name: test3
   namespace: test
 spec:
   containers:
-    - name: test
+    - name: test3
       image: test/test:latest
       resources:
-        requests:
-          ephemeral-storage: "1Gi"
         limits:
+          cpu: 1
+          memory: "1Gi"
+          ephemeral-storage: "1Gi"
+        requests:
           cpu: 1
           memory: "1Gi"
           ephemeral-storage: "1Gi"
