--- a/karpenter/set-karpenter-non-cpu-limits/pod-memory-patched1.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/pod-memory-patched1.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: test
+  name: test1
   namespace: test
 spec:
   containers:
-    - name: test
+    - name: test1
       image: test/test:latest
       resources:
-        requests:
-          memory: "1Gi"
         limits:
+          memory: "1Gi"
+        requests:
           cpu: 1
           memory: "1Gi"
           ephemeral-storage: "1Gi"
