--- a/karpenter/set-karpenter-non-cpu-limits/pod-memory-patched2.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/pod-memory-patched2.yaml
@@ -1,18 +1,16 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: test
+  name: test2
   namespace: test
 spec:
   containers:
-    - name: test
+    - name: test2
       image: test/test:latest
       resources:
-        limits:
-          cpu: 1
-          memory: "1Gi"
-          ephemeral-storage: "1Gi"
         requests:
+          memory: "1Gi"
+        limits:
           cpu: 1
           memory: "1Gi"
           ephemeral-storage: "1Gi"
