--- a/karpenter/set-karpenter-non-cpu-limits/pod-memory-patched3.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/pod-memory-patched3.yaml
@@ -1,14 +1,16 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: test
+  name: test3
   namespace: test
 spec:
   containers:
-    - name: test
+    - name: test3
       image: test/test:latest
       resources:
         limits:
+          cpu: 1
+          memory: "1Gi"
           ephemeral-storage: "1Gi"
         requests:
           cpu: 1
