--- a/karpenter/set-karpenter-non-cpu-limits/pod-memory-patched4.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/pod-memory-patched4.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: test
+  name: test4
   namespace: test
 spec:
   containers:
-    - name: test
+    - name: test4
       image: test/test:latest
       resources: {}
