Replace AllIn with AnyIn as requested
Signed-off-by: Remi Rampin <remi@rampin.org>

--- a/other/ingress-host-match-tls/ingress-host-match-tls.yaml
+++ b/other/ingress-host-match-tls/ingress-host-match-tls.yaml
@@ -29,7 +29,7 @@ spec:
     preconditions:
       all:
       - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: AllIn
+        operator: AnyIn
         value:
         - CREATE
         - UPDATE
