--- a/other/restrict-ingress-host/restrict-ingress-host.yaml
+++ b/other/restrict-ingress-host/restrict-ingress-host.yaml
@@ -31,7 +31,7 @@ spec:
       preconditions:
         all:
         - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: AllIn
+          operator: AnyIn
           value:
           - CREATE
           - UPDATE
@@ -50,7 +50,7 @@ spec:
       preconditions:
         all:
         - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: AllIn
+          operator: AnyIn
           value:
           - CREATE
           - UPDATE
