--- a/other/pdb-minavailable/pdb-minavailable.yaml
+++ b/other/pdb-minavailable/pdb-minavailable.yaml
@@ -28,7 +28,7 @@ spec:
       preconditions:
         all:
           - key: "{{request.operation || 'BACKGROUND'}}"
-            operator: AllIn
+            operator: AnyIn
             value:
             - CREATE
             - UPDATE
