--- a/best-practices/restrict-image-registries/good-pods.yaml
+++ b/best-practices/restrict-image-registries/good-pods.yaml
@@ -1,7 +1,13 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: ir-pods-namespace
+---
+apiVersion: v1
 kind: Pod
 metadata:
   name: goodpod01-registry
+  namespace: ir-pods-namespace
 spec:
   containers:
   - name: k8s-nginx
@@ -11,6 +17,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: goodpod02-registry
+  namespace: ir-pods-namespace
 spec:
   containers:
   - name: k8s-nginx
@@ -20,6 +27,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: goodpod03-registry
+  namespace: ir-pods-namespace
 spec:
   containers:
   - name: k8s-nginx
