--- a/karpenter/add-karpenter-daemonset-priority-class/add-karpenter-daemonset-priority-class.yaml
+++ b/karpenter/add-karpenter-daemonset-priority-class/add-karpenter-daemonset-priority-class.yaml
@@ -5,10 +5,10 @@ metadata:
   annotations:
     policies.kyverno.io/title: Add priority class for DaemonSets to help Karpenter.
     policies.kyverno.io/subject: DaemonSet
-    policies.kyverno.io/category: Karpenter, EKS Best Practices
+    policies.kyverno.io/category: Karpenter
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.7.3
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.9.3
+    kyverno.io/kubernetes-version: "1.26"
     policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       When a DaemonSet is added to a cluster every node will get a new pod. There may not be 
