--- a/karpenter/add-karpenter-daemonset-priority-class/daemonset.yaml
+++ b/karpenter/add-karpenter-daemonset-priority-class/daemonset.yaml
@@ -4,5 +4,14 @@ metadata:
   name: test
   namespace: test
 spec:
+  selector:
+    matchLabels:
+      k8s-app: test
   template:
+    metadata:
+      labels:
+        k8s-app: test
     spec:
+      containers:
+        - name: test
+          image: test/test:latest
