fix: requested changes
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/best-practices/disallow-cri-sock-mount/02-manifests.yaml
+++ b/best-practices/disallow-cri-sock-mount/02-manifests.yaml
@@ -9,3 +9,7 @@ apply:
   shouldFail: true
 - file: pod-crio-sock.yaml
   shouldFail: true
+- file: pod-emptydir-vol.yaml
+  shouldFail: false
+- file: pod-no-volumes.yaml
+  shouldFail: false
