--- a/best-practices/disallow-helm-tiller/bad-deploy.yaml
+++ b/best-practices/disallow-helm-tiller/bad-deploy.yaml
@@ -15,5 +15,7 @@ spec:
         app: busybox
     spec:
       containers:
+      - image: busybox
+        name: busybox:1.35
       - image: docker.io/tiller:latest
         name: helm-tiller
