--- a/best-practices/add-safe-to-evict/notPatchedResources.yaml
+++ b/best-practices/add-safe-to-evict/notPatchedResources.yaml
@@ -4,3 +4,17 @@ metadata:
   name: myapp-pod05
   annotations:
     cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: myapp-pod06
+  annotations:
+    cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: myapp-pod07
+  annotations:
+    cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
