--- a/best-practices/disallow-helm-tiller/bad-pod-success-first.yaml
+++ b/best-practices/disallow-helm-tiller/bad-pod-success-first.yaml
@@ -1,8 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod01-ht
+  name: badpod03-ht
 spec:
   containers:
+  - name: somebox
+    image: busybox:1.35
   - name: helm-tiller
     image: docker.io/tiller:latest
