--- a/best-practices/require-drop-all/02-manifests.yaml
+++ b/best-practices/require-drop-all/02-manifests.yaml
@@ -3,5 +3,13 @@ kind: TestStep
 apply:
 - file: good-pod.yaml
   shouldFail: false
-- file: bad-pod-capabilities.yaml
+- file: good-podcontrollers.yaml
+  shouldFail: false
+- file: bad-pod-containers.yaml
+  shouldFail: true
+- file: bad-pod-initcontainers.yaml
+  shouldFail: true
+- file: bad-pod-corner.yaml
+  shouldFail: true
+- file: bad-podcontrollers.yaml
   shouldFail: true
