--- a/best-practices/require-drop-cap-net-raw/02-manifests.yaml
+++ b/best-practices/require-drop-cap-net-raw/02-manifests.yaml
@@ -3,7 +3,13 @@ kind: TestStep
 apply:
 - file: good-pod.yaml
   shouldFail: false
-- file: bad-pod-capnetraw.yaml
+- file: good-podcontrollers.yaml
+  shouldFail: false
+- file: bad-pod-containers.yaml
   shouldFail: true
-- file: bad-pod-nocap.yaml
+- file: bad-pod-initcontainers.yaml
+  shouldFail: true
+- file: bad-pod-corner.yaml
+  shouldFail: true
+- file: bad-podcontrollers.yaml
   shouldFail: true
