--- a/best-practices/require-drop-cap-net-raw/good-pod.yaml
+++ b/best-practices/require-drop-cap-net-raw/good-pod.yaml
@@ -1,17 +1,25 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: capnetraw-drop-good
+  name: drop-capnetraw-good
 spec:
   initContainers:
   - name: init
     image: busybox:1.35
     securityContext:
       capabilities:
-        drop: ["CAP_NET_RAW"]
+        drop:
+          - CAP_NET_RAW
   containers:
   - name: add-capabilities
     image: busybox:1.35
     securityContext:
       capabilities:
-        drop: ["CAP_NET_RAW"]
+        drop:
+          - CAP_NET_RAW
+  - name: add-capabilities-again
+    image: busybox:1.35
+    securityContext:
+      capabilities:
+        drop:
+          - CAP_NET_RAW
