--- a/best-practices/require-probes/02-manifests.yaml
+++ b/best-practices/require-probes/02-manifests.yaml
@@ -3,7 +3,11 @@ kind: TestStep
 apply:
 - file: good-pods.yaml
   shouldFail: false
+- file: good-podcontrollers.yaml
+  shouldFail: false
 - file: bad-pod-nothing.yaml
   shouldFail: true
 - file: bad-pod-notall.yaml
+  shouldFail: true
+- file: bad-podcontrollers.yaml
   shouldFail: true
