--- a/best-practices/require-probes/bad-pod-notall.yaml
+++ b/best-practices/require-probes/bad-pod-notall.yaml
@@ -16,3 +16,22 @@ spec:
       periodSeconds: 10
   - name: busybox
     image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod03
+  labels:
+    app: myapp
+spec:
+  containers:
+  - name: busybox
+    image: busybox:1.35
+  - name: busybox
+    image: busybox:1.35
+    ports:
+    - containerPort: 8080
+    readinessProbe:
+      tcpSocket:
+        port: 8080
+      periodSeconds: 10
