--- a/best-practices/require-ro-rootfs/02-manifests.yaml
+++ b/best-practices/require-ro-rootfs/02-manifests.yaml
@@ -3,9 +3,13 @@ kind: TestStep
 apply:
 - file: good-pods.yaml
   shouldFail: false
+- file: good-podcontrollers.yaml
+  shouldFail: false
 - file: bad-pod-nothing.yaml
   shouldFail: true
 - file: bad-pod-notall.yaml
   shouldFail: true
 - file: bad-pod-false.yaml
+  shouldFail: true
+- file: bad-podcontrollers.yaml
   shouldFail: true
