--- a/best-practices/restrict-image-registries/98-delete.yaml
+++ b/best-practices/restrict-image-registries/98-delete.yaml
@@ -2,3 +2,5 @@ apiVersion: kuttl.dev/v1beta1
 kind: TestStep
 commands:
   - command: kubectl delete pods --all --force --grace-period=0 -n ir-pods-namespace
+  - command: kubectl delete jobs --all --force --grace-period=0 -n ir-pods-namespace
+  - command: kubectl delete deployments --all --force --grace-period=0 -n ir-pods-namespace
