fix: failing test
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/best-practices/disallow-cri-sock-mount/pod-emptydir-vol.yaml
+++ b/best-practices/disallow-cri-sock-mount/pod-emptydir-vol.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: pod-with-no-volumes
+  name: pod-with-emptydir-volume
 spec:
   containers:
   - name: busybox
