fix: requested changes
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/best-practices/require-probes/bad-pod-update.yaml
+++ b/best-practices/require-probes/bad-pod-update.yaml
@@ -6,7 +6,5 @@ metadata:
     app: myapp
 spec:
   containers:
-  - name: busybox
-    image: busybox:1.35
-  - name: busybox
+  - name: evil-box
     image: busybox:1.35
