update policies to add UPDATE
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/pdb-minavailable/pdb-minavailable.yaml
+++ b/other/pdb-minavailable/pdb-minavailable.yaml
@@ -27,9 +27,11 @@ spec:
                 - StatefulSet
       preconditions:
         all:
-          - key: "{{request.operation || 'BACKGROUND'}}"
-            operator: Equals
-            value: CREATE
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: AnyIn
+          value:
+          - CREATE
+          - UPDATE
       context:
         - name: minavailable
           apiCall:
