--- a/other/restrict-ingress-host/restrict-ingress-host.yaml
+++ b/other/restrict-ingress-host/restrict-ingress-host.yaml
@@ -30,9 +30,11 @@ spec:
             jmesPath: "items[].spec.rules[].host"
       preconditions:
         all:
-        - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: Equals
-          value: CREATE
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: AnyIn
+          value:
+          - CREATE
+          - UPDATE
         - key: "{{ request.object.spec.rules[].host }}"
           operator: AnyIn
           value: "{{ hosts }}"
@@ -47,9 +49,11 @@ spec:
               - Ingress
       preconditions:
         all:
-        - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: Equals
-          value: CREATE
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: AnyIn
+          value:
+          - CREATE
+          - UPDATE
         - key: "{{ request.object.spec.rules[].host | length(@)}}"
           operator: GreaterThan
           value: 1
