--- a/other/unique-ingress-paths/unique-ingress-paths.yaml
+++ b/other/unique-ingress-paths/unique-ingress-paths.yaml
@@ -39,8 +39,10 @@ spec:
       preconditions:
         any:
         - key: "{{request.operation || 'BACKGROUND'}}"
-          operator: Equals
-          value: "CREATE"
+          operator: AnyIn
+          value:
+          - CREATE
+          - UPDATE
       validate:
         message: >-
           The root path /{{request.object.spec.rules[].http.paths[].path | [0] | to_string(@) | split(@, '/') | [1]}} exists
