modify Scale Deployment to Zero to account for all containers in a pod
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/scale-deployment-zero/scale-deployment-zero.yaml
+++ b/other/scale-deployment-zero/scale-deployment-zero.yaml
@@ -32,7 +32,7 @@ spec:
       - key: "{{request.operation || 'BACKGROUND'}}"
         operator: Equals
         value: UPDATE
-      - key: "{{request.object.status.containerStatuses[0].restartCount}}"
+      - key: "{{ sum(request.object.status.containerStatuses[*].restartCount || [`0`]) }}"
         operator: GreaterThan
         value: 1
     context:
