tests: kasten and karpenter tests
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/karpenter/set-karpenter-non-cpu-limits/pod-ephemeral-storage-patched3.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/pod-ephemeral-storage-patched3.yaml
@@ -9,10 +9,10 @@ spec:
       image: test/test:latest
       resources:
         limits:
-          cpu: 1
+          cpu: "1"
           memory: "1Gi"
           ephemeral-storage: "1Gi"
         requests:
-          cpu: 1
+          cpu: "1"
           memory: "1Gi"
           ephemeral-storage: "1Gi"
