--- a/karpenter/set-karpenter-non-cpu-limits/pod-ephemeral-storage-patched2.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/pod-ephemeral-storage-patched2.yaml
@@ -11,6 +11,6 @@ spec:
         requests:
           ephemeral-storage: "1Gi"
         limits:
-          cpu: 1
+          cpu: "1"
           memory: "1Gi"
           ephemeral-storage: "1Gi"
