--- a/karpenter/set-karpenter-non-cpu-limits/pod-memory-patched1.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/pod-memory-patched1.yaml
@@ -11,6 +11,6 @@ spec:
         limits:
           memory: "1Gi"
         requests:
-          cpu: 1
+          cpu: "1"
           memory: "1Gi"
           ephemeral-storage: "1Gi"
