--- a/karpenter/set-karpenter-non-cpu-limits/pod-memory-patched3.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/pod-memory-patched3.yaml
@@ -9,10 +9,10 @@ spec:
       image: test/test:latest
       resources:
         limits:
-          cpu: 1
+          cpu: "1"
           memory: "1Gi"
           ephemeral-storage: "1Gi"
         requests:
-          cpu: 1
+          cpu: "1"
           memory: "1Gi"
           ephemeral-storage: "1Gi"
