fix: requested changes
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/karpenter/set-karpenter-non-cpu-limits/03-mutated.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/03-mutated.yaml
@@ -10,3 +10,4 @@ assert:
 - pod-ephemeral-storage-patched3.yaml
 - pod-ephemeral-storage-patched4.yaml
 - podcontroller-patched.yaml
+- pod-others-patched.yaml
