--- a/istio/create-authorizationpolicy/create-authorizationpolicy.yaml
+++ b/istio/create-authorizationpolicy/create-authorizationpolicy.yaml
@@ -26,7 +26,7 @@ spec:
           - Namespace
     generate:
       apiVersion: security.istio.io/v1beta1
-      kind: AuthorizationPolicy
+      kind: security.istio.io/v1beta1/AuthorizationPolicy
       name: default-deny
       namespace: "{{request.object.metadata.name}}"
       synchronize: true
