test: kubevirt add-services
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/kubevirt/add-services/add-services.yaml
+++ b/kubevirt/add-services/add-services.yaml
@@ -37,7 +37,7 @@ spec:
         spec:
           ports:
           - protocol: TCP
-            targetPort: 22
-            selector:
-              kubevirt.io/domain: "{{request.object.metadata.name}}"
+            port: 22
+          selector:
+            kubevirt.io/domain: "{{request.object.metadata.name}}"
           type: ClusterIP
