--- a/kubevirt/add-services/generated-svc.yaml
+++ b/kubevirt/add-services/generated-svc.yaml
@@ -2,12 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: vmi-name
-  namespace: default
+  namespace: kubevirt-test-ns
   ownerReferences:
   - apiVersion: kubevirt.io/v1
     kind: VirtualMachineInstance
     name: vmi-name
-    uid: feb5a62b-8784-41d2-b104-bf6ebc4a0000
 spec:
   ports:
   - protocol: TCP
