--- a/kubevirt/add-services/vmi.yaml
+++ b/kubevirt/add-services/vmi.yaml
@@ -3,7 +3,7 @@ kind: Namespace
 metadata:
   name: kubevirt-test-ns
 ---
-apiVersion: kubevirt.io/v1
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 metadata:
   name: vmi-name
