fix: requested changed certificate-vol
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/add-certificates-volume/podcontroller-resources.yaml
+++ b/other/add-certificates-volume/podcontroller-resources.yaml
@@ -51,3 +51,30 @@ spec:
           image: busybox:1.35
         - name: bb-02
           image: busybox:1.35
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app: busybox
+  name: deployment03
+  namespace: other-certvol-ns
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: busybox
+  strategy: {}
+  template:
+    metadata:
+      annotations:
+        foo: bar
+      labels:
+        app: busybox
+    spec:
+      automountServiceAccountToken: false
+      containers:
+        - name: bb-01
+          image: busybox:1.35
+        - name: bb-02
+          image: busybox:1.35
