--- a/other/add-certificates-volume/pod-not-patched.yaml
+++ b/other/add-certificates-volume/pod-not-patched.yaml
@@ -21,3 +21,51 @@ spec:
   - name: etc-ssl-certs
     configMap:
       name: ca-pemstore
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: pod03
+  namespace: other-certvol-ns
+spec:
+  automountServiceAccountToken: false
+  containers:
+    - name: pod03-01
+      image: busybox:1.35
+      volumeMounts:
+      - name: etc-ssl-certs
+        mountPath: /etc/ssl/certs
+    - name: pod03-02
+      image: busybox:1.35
+      volumeMounts:
+      - name: etc-ssl-certs
+        mountPath: /etc/ssl/certs
+  volumes:
+  - name: etc-ssl-certs
+    configMap:
+      name: ca-pemstore
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  annotations:
+    foo: bar
+  name: pod04
+  namespace: other-certvol-ns
+spec:
+  automountServiceAccountToken: false
+  containers:
+    - name: pod04-01
+      image: busybox:1.35
+      volumeMounts:
+      - name: etc-ssl-certs
+        mountPath: /etc/ssl/certs
+    - name: pod04-02
+      image: busybox:1.35
+      volumeMounts:
+      - name: etc-ssl-certs
+        mountPath: /etc/ssl/certs
+  volumes:
+  - name: etc-ssl-certs
+    configMap:
+      name: ca-pemstore
