--- a/other/add-certificates-volume/pod-resources.yaml
+++ b/other/add-certificates-volume/pod-resources.yaml
@@ -27,3 +27,31 @@ spec:
       image: busybox:1.35
     - name: pod02-02
       image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: pod03
+  namespace: other-certvol-ns
+spec:
+  automountServiceAccountToken: false
+  containers:
+    - name: pod03-01
+      image: busybox:1.35
+    - name: pod03-02
+      image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  annotations:
+    foo: bar
+  name: pod04
+  namespace: other-certvol-ns
+spec:
+  automountServiceAccountToken: false
+  containers:
+    - name: pod04-01
+      image: busybox:1.35
+    - name: pod04-02
+      image: busybox:1.35
