tests: tests from others and kubevirt (#649)
* tests: 10 tests from other category

Signed-off-by: Alok N <alokme123@gmail.com>

* test: kubevirt enforce-instancetype

Signed-off-by: Alok N <alokme123@gmail.com>

* fix: requested changed certificate-vol

Signed-off-by: Alok N <alokme123@gmail.com>

* rm: whitespace

Signed-off-by: Alok N <alokme123@gmail.com>

---------

Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/add-certificates-volume/add-certificates-volume.yaml
+++ b/other/add-certificates-volume/add-certificates-volume.yaml
@@ -26,7 +26,7 @@ spec:
           - Pod
     preconditions:
       all:
-      - key: '{{request.object.metadata.annotations."inject-certs"}}'
+      - key: '{{request.object.metadata.annotations."inject-certs" || ""}}'
         operator: Equals
         value: enabled
       - key: "{{request.operation || 'BACKGROUND'}}"
