fix: requested changes
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/allowed-image-repos/pod-bad.yaml
+++ b/other/allowed-image-repos/pod-bad.yaml
@@ -48,4 +48,4 @@ spec:
     - name: pod-01
       image: myknownimage
     - name: pod-02
-      image: busybox:1.35
+      image: docker.io/busybox:1.35
