--- a/other/allowed-label-changes/bad-update.yaml
+++ b/other/allowed-label-changes/bad-update.yaml
@@ -10,6 +10,7 @@ kind: Pod
 metadata:
   labels:
     foo: foo
+    breakglass: broken
   name: pod02
 ---
 apiVersion: v1
@@ -31,6 +32,7 @@ kind: StatefulSet
 metadata:
   labels:
     foo: foo
+    breakglass: hitormiss
   name: ss01
 ---
 apiVersion: apps/v1
@@ -52,4 +54,5 @@ kind: CronJob
 metadata:
   labels:
     foo: foo
+    breakglass: shoot
   name: cronjob01
