fix: modify test manifest for add-default-resources and set-karpenter-non-cpu-limits
Signed-off-by: Mariam Fahmy <mariamfahmy66@gmail.com>

--- a/other/add-default-resources/kyverno-test.yaml
+++ b/other/add-default-resources/kyverno-test.yaml
@@ -16,7 +16,7 @@ results:
     resource: nginx-demo2
     patchedResource: patchedResource2.yaml
     kind: Pod
-    result: pass
+    result: skip
   - policy: add-default-resources
     rule: add-default-requests
     resource: nginx-demo3
