fix: requested changes
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/block-cluster-admin-from-ns/07-delete.yaml
+++ b/other/block-cluster-admin-from-ns/07-delete.yaml
@@ -2,5 +2,4 @@ apiVersion: kuttl.dev/v1beta1
 kind: TestStep
 commands:
 - command: kubectl delete -f good-pod.yaml
-- command: find . -name 'ca.*' -delete
-- command: find . -name 'testuser.*' -delete
+- command: kubectl delete -f good-cm.yaml
