--- a/other/block-cluster-admin-from-ns/02-setup-user.yaml
+++ b/other/block-cluster-admin-from-ns/02-setup-user.yaml
@@ -1,10 +1,41 @@
 apiVersion: kuttl.dev/v1beta1
 kind: TestStep
 commands:
-- command: openssl genrsa -out testuser.key 2048
-- command: openssl req -new -key testuser.key -out testuser.csr -subj "/CN=testuser/O=testorg"
-- command: "docker cp kind-control-plane:/etc/kubernetes/pki/ca.crt ."
-- command: "docker cp kind-control-plane:/etc/kubernetes/pki/ca.key ."
-- command: openssl x509 -req -in testuser.csr -CA ca.crt -CAkey ca.key -CAcreateserial -out testuser.crt -days 10
-- command: kubectl config set-credentials testuser --client-certificate=testuser.crt --client-key=testuser.key
-- command: kubectl config set-context testuser-context --cluster=cluster --user=testuser
+- script: |
+    #!/bin/bash
+    set -eu
+    export USERNAME=testuser
+    export CA=ca.crt
+    #### Get CA certificate from kubeconfig assuming it's the first in the list.
+    kubectl config view --raw -o jsonpath='{.clusters[0].cluster.certificate-authority-data}' | base64 --decode > ./ca.crt
+    #### Set CLUSTER_SERVER from kubeconfig assuming it's the first in the list.
+    CLUSTER_SERVER="$(kubectl config view --raw -o jsonpath='{.clusters[0].cluster.server}')"
+    #### Set CLUSTER from kubeconfig assuming it's the first in the list.
+    CLUSTER="$(kubectl config view --raw -o jsonpath='{.clusters[0].name}')"
+    #### Generate private key
+    openssl genrsa -out $USERNAME.key 2048
+    #### Create CSR
+    openssl req -new -key $USERNAME.key -out $USERNAME.csr -subj "/O=testorg/CN=$USERNAME"
+    #### Send CSR to kube-apiserver for approval
+    cat <<EOF | kubectl apply -f -
+    apiVersion: certificates.k8s.io/v1
+    kind: CertificateSigningRequest
+    metadata:
+      name: $USERNAME
+    spec:
+      request: $(cat $USERNAME.csr | base64 | tr -d '\n')
+      signerName: kubernetes.io/kube-apiserver-client
+      usages:
+      - client auth
+    EOF
+    #### Approve CSR
+    kubectl certificate approve $USERNAME
+    #### Download certificate
+    kubectl get csr $USERNAME -o jsonpath='{.status.certificate}' | base64 --decode > $USERNAME.crt
+    ####
+    #### Create the credential object and output the new kubeconfig file
+    kubectl config set-credentials $USERNAME --client-certificate=$USERNAME.crt --client-key=$USERNAME.key --embed-certs
+    #### Set the context
+    kubectl config set-context $USERNAME-context --user=$USERNAME --cluster=$CLUSTER
+    # Delete CSR
+    kubectl delete csr $USERNAME
