test: block-pod-exec tests, stale-images, updates-deletes tests
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/block-pod-exec-by-pod-label/block-pod-exec-by-pod-label.yaml
+++ b/other/block-pod-exec-by-pod-label/block-pod-exec-by-pod-label.yaml
@@ -25,7 +25,7 @@ spec:
     - name: podexeclabel
       apiCall:
         urlPath: "/api/v1/namespaces/{{request.namespace}}/pods/{{request.name}}"
-        jmesPath: "metadata.labels.exec"
+        jmesPath: "metadata.labels.exec || ''"
     preconditions:
       all:
       - key: "{{ request.operation || 'BACKGROUND' }}"
