--- a/other/block-pod-exec-by-namespace-label/block-pod-exec-by-namespace-label.yaml
+++ b/other/block-pod-exec-by-namespace-label/block-pod-exec-by-namespace-label.yaml
@@ -25,7 +25,7 @@ spec:
     - name: nslabelexec
       apiCall:
         urlPath: "/api/v1/namespaces/{{request.namespace}}"
-        jmesPath: "metadata.labels.exec"
+        jmesPath: "metadata.labels.exec || ''"
     preconditions:
       all:
       - key: "{{ request.operation || 'BACKGROUND' }}"
