--- a/other/block-stale-images/pods-good.yaml
+++ b/other/block-stale-images/pods-good.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
   containers:
   - name: busybox 
-    image: busybox:1.35
+    image: busybox:latest
   - name: busybox02
-    image: busybox:1.35
+    image: busybox:latest
 ---
 apiVersion: v1
 kind: Pod
@@ -18,4 +18,4 @@ metadata:
 spec:
   containers:
   - name: busybox
-    image: busybox:1.35
+    image: busybox:latest
