--- a/other/block-stale-images/podcontrollers-bad.yaml
+++ b/other/block-stale-images/podcontrollers-bad.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: busybox
-        image: busybox:1.35
+        image: busybox:latest
       - name: busybox02
         image: busybox:1.28
 ---
@@ -37,5 +37,5 @@ spec:
           - name: busybox
             image: busybox:1.28
           - name: busybox02
-            image: busybox:1.35
+            image: busybox:latest
           restartPolicy: OnFailure
