--- a/other/block-stale-images/podcontrollers-good.yaml
+++ b/other/block-stale-images/podcontrollers-good.yaml
@@ -18,9 +18,9 @@ spec:
     spec:
       containers:
       - name: busybox
-        image: busybox:1.35
+        image: busybox:latest
       - name: busybox02
-        image: busybox:1.35
+        image: busybox:latest
 ---
 apiVersion: batch/v1
 kind: CronJob
@@ -35,7 +35,7 @@ spec:
         spec:
           containers:
           - name: busybox
-            image: busybox:1.35
+            image: busybox:latest
           - name: busybox02
-            image: busybox:1.35
+            image: busybox:latest
           restartPolicy: OnFailure
