test: check-subjectaccessreview
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/check-subjectaccessreview/check-subjectaccessreview.yaml
+++ b/other/check-subjectaccessreview/check-subjectaccessreview.yaml
@@ -39,8 +39,8 @@ spec:
             value: authorization.k8s.io/v1
           - key: spec
             value:
-              resource: "namespace"
               resourceAttributes:
+                resource: "namespaces"
                 namespace: "{{ request.namespace }}"
                 verb: "delete"
                 group: ""
