test: 11 tests from others
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/enforce-pod-duration/enforce-pod-duration.yaml
+++ b/other/enforce-pod-duration/enforce-pod-duration.yaml
@@ -26,6 +26,6 @@ spec:
       deny:
         conditions:
           any:
-          - key: "{{ request.object.metadata.annotations.\"pod.kubernetes.io/lifetime\" }}"
+          - key: "{{ request.object.metadata.annotations.\"pod.kubernetes.io/lifetime\" || '0s' }}"
             operator: GreaterThan
             value: "8h"
