--- a/other/check-env-vars/pods-bad.yaml
+++ b/other/check-env-vars/pods-bad.yaml
@@ -71,3 +71,22 @@ spec:
       env:
       - name: DISABLE_OPA
         value: "true"
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  labels:
+    run: busybox
+  name: badpod05
+spec:
+  containers:
+    - image: busybox:1.35
+      name: busybox
+      env:
+      - name: DISABLE_OPA
+        value: "false"
+    - image: busybox:1.35
+      name: busybox02
+      env:
+      - name: DISABLE_OPA
+        value: "true"
