fix: requested changes
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/disallow-all-secrets/01-assert.yaml
+++ b/other/disallow-all-secrets/01-assert.yaml
@@ -1,7 +1,6 @@
 apiVersion: kyverno.io/v1
-kind: Policy
+kind: ClusterPolicy
 metadata:
   name: no-secrets
-  namespace: no-secrets-ns
 status:
   ready: true
