--- a/other/deny-commands-in-exec-probe/pods-bad.yaml
+++ b/other/deny-commands-in-exec-probe/pods-bad.yaml
@@ -49,3 +49,58 @@ spec:
           command:
           - jcmd
         periodSeconds: 10
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod04
+spec:
+  containers:
+    - image: busybox:1.35
+      name: busybox
+    - image: busybox:1.35
+      name: busybox02
+      livenessProbe:
+        exec:
+          command:
+          - echo
+          - jcmd
+          - echo
+          - hello
+        periodSeconds: 10
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod05
+spec:
+  containers:
+    - image: busybox:1.35
+      name: busybox
+    - image: busybox:1.35
+      name: busybox02
+      livenessProbe:
+        exec:
+          command:
+          - echo
+          - $(jcmd)
+          - echo
+        periodSeconds: 10
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod06
+spec:
+  containers:
+    - image: busybox:1.35
+      name: busybox
+    - image: busybox:1.35
+      name: busybox02
+      livenessProbe:
+        exec:
+          command:
+          - "echo bar"
+          - "echo ls foo"
+          - "echo bar"
+        periodSeconds: 10
