--- a/other/deny-commands-in-exec-probe/pods-good.yaml
+++ b/other/deny-commands-in-exec-probe/pods-good.yaml
@@ -44,3 +44,16 @@ spec:
       name: busybox
     - image: busybox:1.35
       name: busybox02
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: goodpod04
+spec:
+  containers:
+    - image: busybox:1.35
+      name: busybox
+      livenessProbe:
+        grpc:
+          port: 8888
+        periodSeconds: 10
