test: ensure-probes-different
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/dns-policy-and-dns-config/dns-policy-and-dns-config.yaml
+++ b/other/dns-policy-and-dns-config/dns-policy-and-dns-config.yaml
@@ -33,7 +33,7 @@ spec:
           - Pod
     preconditions:
       any:
-      - key: "{{ request.object.spec.dnsPolicy }}"
+      - key: "{{ request.object.spec.dnsPolicy || '' }}"
         operator: AnyIn
         value: 
         - ClusterFirst
