--- a/other/ensure-probes-different/ensure-probes-different.yaml
+++ b/other/ensure-probes-different/ensure-probes-different.yaml
@@ -12,7 +12,8 @@ metadata:
     policies.kyverno.io/description: >-
       Liveness and readiness probes accomplish different goals, and setting both to the same
       is an anti-pattern and often results in app problems in the future. This policy
-      checks that liveness and readiness probes are not equal.
+      checks that liveness and readiness probes are not equal. Keep in mind that if both the 
+      probes are not set, they are considered to be equal and hence fails the check.
 spec:
   validationFailureAction: audit
   background: false
@@ -32,4 +33,4 @@ spec:
             any:
             - key: "{{ request.object.spec.template.spec.containers[?readinessProbe==livenessProbe] | length(@) }}"
               operator: GreaterThan
-              value: "0"
+              value: 0
