--- a/other/dns-policy-and-dns-config/01-policy.yaml
+++ b/other/dns-policy-and-dns-config/01-policy.yaml
@@ -5,3 +5,5 @@ apply:
 - ns.yaml
 assert:
 - policy-ready.yaml
+commands:
+- script: if kubectl create -f kubeadm-config.yaml; then exit 0; else exit 0; fi
