--- a/openshift/enforce-etcd-encryption/enforce-etcd-encryption.yaml
+++ b/openshift/enforce-etcd-encryption/enforce-etcd-encryption.yaml
@@ -11,7 +11,7 @@ metadata:
     kyverno.io/kubernetes-version: "1.20"
     policies.kyverno.io/subject: APIServer
     policies.kyverno.io/description: >-
-      Encrption at rest is a security best practice. This policy ensures encryption is enabled for etcd in OpenShift clusters.
+      Encryption at rest is a security best practice. This policy ensures encryption is enabled for etcd in OpenShift clusters.
 spec:
   validationFailureAction: enforce
   background: true
