Resolve PR comments, update sha hash and incorporate Chip's feedback
Signed-off-by: Phil Andrews <phil@Phils-MacBook-Pro.local>

--- a/castai/add-castai-removal-disabled/02-manifests.yaml
+++ b/castai/add-castai-removal-disabled/02-manifests.yaml
@@ -1,7 +1,5 @@
 apiVersion: kuttl.dev/v1beta1
 kind: TestStep
 apply:
-- file: patched01.yaml
-  shouldFail: false
-- file: patched02.yaml
+- file: resources.yaml
   shouldFail: false
