--- a/castai/add-castai-removal-disabled/add-castai-removal-disabled.yaml
+++ b/castai/add-castai-removal-disabled/add-castai-removal-disabled.yaml
@@ -4,11 +4,10 @@ metadata:
   name: add-castai-removal-disabled
   annotations:
     policies.kyverno.io/title: Add CAST AI Removal Disabled
-    policies.kyverno.io/category: CAST AI, EKS Best Practices
+    policies.kyverno.io/category: CAST AI
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/subject: Pod
-    kyverno.io/kyverno-version: 1.7.1
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/subject: "Job, CronJob"
+    kyverno.io/kyverno-version: 1.9
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/description: >- 
       CAST AI will not downscale a node that includes a pod with the 
