Missed some of the PR comments, updated to be labels consistently and re-tested with 1.25
Signed-off-by: Phil Andrews <phil@Phils-MacBook-Pro.local>

--- a/castai/add-castai-removal-disabled/patched01.yaml
+++ b/castai/add-castai-removal-disabled/patched01.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   template:
     metadata:
-      annotations:
+      labels:
         autoscaling.cast.ai/removal-disabled: "true"
     spec:
       containers:
