--- a/castai/add-castai-removal-disabled/patched02.yaml
+++ b/castai/add-castai-removal-disabled/patched02.yaml
@@ -8,7 +8,7 @@ spec:
     spec:
       template:
         metadata:
-          annotations:
+          labels:
             autoscaling.cast.ai/removal-disabled: "true"
         spec:
           containers:
