--- a/castai/add-castai-removal-disabled/add-castai-removal-disabled.yaml
+++ b/castai/add-castai-removal-disabled/add-castai-removal-disabled.yaml
@@ -6,9 +6,9 @@ metadata:
     policies.kyverno.io/title: Add CAST AI Removal Disabled
     policies.kyverno.io/category: CAST AI
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/subject: "Job, CronJob"
+    policies.kyverno.io/subject: Job, CronJob
     kyverno.io/kyverno-version: 1.9
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kubernetes-version: "1.25"
     policies.kyverno.io/description: >- 
       CAST AI will not downscale a node that includes a pod with the 
       autoscaling.cast.ai/removal-disabled="true" label on it, this protects
@@ -28,7 +28,7 @@ spec:
         spec:
           template:
             metadata:
-              annotations:
+              labels:
                 autoscaling.cast.ai/removal-disabled: "true"
   - name: do-not-evict-cronjobs
     match:
@@ -43,5 +43,5 @@ spec:
             spec:
               template:
                 metadata:
-                  annotations:
+                  labels:
                     autoscaling.cast.ai/removal-disabled: "true"
