fix string error and found another filename issue
Signed-off-by: Phil Andrews <phil@Phils-MacBook-Pro.local>

--- a/castai/add-castai-removal-disabled/add-castai-removal-disabled.yaml
+++ b/castai/add-castai-removal-disabled/add-castai-removal-disabled.yaml
@@ -6,8 +6,8 @@ metadata:
     policies.kyverno.io/title: Add CAST AI Removal Disabled
     policies.kyverno.io/category: CAST AI
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/subject: Job, CronJob
-    kyverno.io/kyverno-version: 1.9
+    policies.kyverno.io/subject: "Job, CronJob"
+    kyverno.io/kyverno-version: "1.9"
     kyverno.io/kubernetes-version: "1.25"
     policies.kyverno.io/description: >- 
       CAST AI will not downscale a node that includes a pod with the 
