test: add castai category to workflow
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
           - argo
           - aws
           - best-practices
-          # - castai
+          - castai
           - cert-manager
           # - consul
           - external-secret-operator
