fix: block-stale-images fail
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/block-stale-images/99-delete.yaml
+++ b/other/block-stale-images/99-delete.yaml
@@ -3,3 +3,6 @@ kind: TestStep
 commands:
   - command: kubectl delete all --all --force --grace-period=0 -n block-staleimg-ns
   - command: kubectl delete cpol block-stale-images
+  - command: sleep 10
+  - command: kubectl delete all --all --force --grace-period=0 -n block-staleimg-ns # due to test fails
+  - command: sleep 10
