test: 4 tests from others
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/allowed-pod-priorities/allowed-pod-priorities.yaml
+++ b/other/allowed-pod-priorities/allowed-pod-priorities.yaml
@@ -35,13 +35,13 @@ spec:
     validate:
       message: >-
         The Pod PriorityClass {{ request.object.spec.template.spec.priorityClassName }} is not in the list
-        of the following PriorityClasses allowed in this Namespace: {{ podprioritydict.data.{{request.namespace}} }}.
+        of the following PriorityClasses allowed in this Namespace: {{ podprioritydict.data."{{request.namespace}}" }}.
       deny:
         conditions:
           any:
           - key: "{{ request.object.spec.template.spec.priorityClassName }}"
             operator: AnyNotIn
-            value:  "{{ podprioritydict.data.{{request.namespace}} }}"
+            value:  '{{ podprioritydict.data."{{request.namespace}}" || "" }}'
   - name: validate-pod-priority-pods
     context:
       - name: podprioritydict
@@ -56,13 +56,13 @@ spec:
     validate:
       message: >-
         The Pod PriorityClass {{ request.object.spec.priorityClassName }} is not in the list
-        of the following PriorityClasses allowed in this Namespace: {{ podprioritydict.data.{{request.namespace}} }}.
+        of the following PriorityClasses allowed in this Namespace: {{ podprioritydict.data."{{request.namespace}}" }}.
       deny:
         conditions:
           any:
-          - key: "{{ request.object.spec.priorityClassName }}"
+          - key: "{{ request.object.spec.priorityClassName || '' }}"
             operator: AnyNotIn
-            value:  "{{ podprioritydict.data.{{request.namespace}} }}"
+            value:  '{{ podprioritydict.data."{{request.namespace}}" || "" }}'
   - name: validate-pod-priority-cronjob
     context:
       - name: podprioritydict
@@ -77,10 +77,10 @@ spec:
     validate:
       message: >-
         The Pod PriorityClass {{ request.object.spec.jobTemplate.spec.template.spec.priorityClassName }} is not in the list
-        of the following PriorityClasses allowed in this Namespace: {{ podprioritydict.data.{{request.namespace}} }}.
+        of the following PriorityClasses allowed in this Namespace: {{ podprioritydict.data."{{request.namespace}}" }}.
       deny:
         conditions:
           any:
           - key: "{{ request.object.spec.jobTemplate.spec.template.spec.priorityClassName }}"
             operator: AnyNotIn
-            value:  "{{ podprioritydict.data.{{request.namespace}} }}"
+            value:  '{{ podprioritydict.data."{{request.namespace}}" || "" }}'
