--- a/other/exclude-namespaces-dynamically/exclude-namespaces-dynamically.yaml
+++ b/other/exclude-namespaces-dynamically/exclude-namespaces-dynamically.yaml
@@ -8,6 +8,7 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Namespace, Pod
     policies.kyverno.io/minversion: 1.6.0
+    pod-policies.kyverno.io/autogen-controllers: none
     kyverno.io/kyverno-version: 1.6.0
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/description: >-
@@ -20,6 +21,36 @@ spec:
   background: true
   rules:
   - name: exclude-namespaces-dynamically
+    context:
+      - name: namespacefilters
+        configMap:
+          name: namespace-filters
+          namespace: default
+    match:
+      any:
+      - resources:
+          kinds:
+          - Deployment
+          - DaemonSet
+          - StatefulSet
+          - Job
+    preconditions:
+      all:
+      - key: "{{request.object.metadata.namespace}}"
+        operator: AnyNotIn
+        value: "{{namespacefilters.data.exclude}}"
+    validate:
+      message: >
+        Creating Pods in the {{request.namespace}} namespace,
+        which is not in the excluded list of namespaces {{ namespacefilters.data.exclude }},
+        is forbidden unless it carries the label `foo`.
+      pattern:
+        spec:
+          template:
+            metadata:
+              labels:
+                foo: "*"
+  - name: exclude-namespaces-dynamically-pods
     context:
       - name: namespacefilters
         configMap:
@@ -44,3 +75,32 @@ spec:
         metadata:
           labels:
             foo: "*"
+  - name: exclude-namespaces-dynamically-cronjobs
+    context:
+      - name: namespacefilters
+        configMap:
+          name: namespace-filters
+          namespace: default
+    match:
+      any:
+      - resources:
+          kinds:
+          - CronJob
+    preconditions:
+      all:
+      - key: "{{request.object.metadata.namespace}}"
+        operator: AnyNotIn
+        value: "{{namespacefilters.data.exclude}}"
+    validate:
+      message: >
+        Creating Pods in the {{request.namespace}} namespace,
+        which is not in the excluded list of namespaces {{ namespacefilters.data.exclude }},
+        is forbidden unless it carries the label `foo`.
+      pattern:
+        spec:
+          jobTemplate:
+            spec:
+              template:
+                metadata:
+                  labels:
+                    foo: "*"
