--- a/other/ingress-host-match-tls/ingress-host-match-tls.yaml
+++ b/other/ingress-host-match-tls/ingress-host-match-tls.yaml
@@ -39,5 +39,5 @@ spec:
         conditions:
           all:
           - key: "{{ (request.object.spec.rules[].host || `[]`) | sort(@) }}"
-            operator: AllNotIn
+            operator: AnyNotIn
             value: "{{ (request.object.spec.tls[].hosts[] || `[]`) | sort(@) }}"
