test: 8 tests from others
Signed-off-by: Alok N <alokme123@gmail.com>

--- a/other/limit-configmap-for-sa/limit-configmap-for-sa.yaml
+++ b/other/limit-configmap-for-sa/limit-configmap-for-sa.yaml
@@ -17,9 +17,9 @@ spec:
   - name: limit-configmap-for-sa-developer
     match:
       any:
-      - resources:
-          kinds:
-          - ConfigMap
+      # - resources:
+      #     kinds:
+      #     - ConfigMap
         # subjects:
         # - kind: ServiceAccount
         #   name: developer
